refactoring backend repo

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DBNAME=YourDBName
 DBPASSWORD=YourDBPassword
 DISCORD_TOKEN=YourDiscordToken
 DISCORD_CLIENT_SECRET=YourDiscordClient
+DISCORD_CLIENT_ID=1004492570887471106
